--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,28 @@
         <item>Guisantes 0,60€</item>
         <item>Habichuelas 1,10€</item>
     </string-array>
+    <string-array name="LacteosPrecio">
+        <item>1</item>
+        <item>0,50</item>
+        <item>0,60</item>
+        <item>1,10</item>
+    </string-array>
+    <string-array name="CarnePrecio">
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+    <string-array name="PescadoPrecio">
+        <item>4</item>
+        <item>3,50</item>
+        <item>4,60</item>
+        <item>2,10</item>
+    </string-array>
+    <string-array name="VerduraPrecio">
+        <item>1</item>
+        <item>0,50</item>
+        <item>0,60</item>
+        <item>1,10</item>
+    </string-array>
 </resources>
